# vrtest

./: Cargo.toml  README.md  rust-toolchain.toml
src/: ext_builder.rs  lib.rs  mock.rs  proxy_helper.rs  runtime_types.rs  staking_helper.rs  utils.rs
src/contract/: contract.rs  mod.rs
src/contract/builders/: calculate_gas.rs  command.rs  create_contract.rs  mod.rs  query.rs  upload_code.rs  upload_wasm.rs
src/runtime/: mod.rs
src/types/: actorid32.rs  builtin_staking.rs  general_types.rs  mod.rs
tests/: runtime_test.rs  sails-contract.rs  sails-staking.rs  staking.rs  upload_code.rs
